--- a/src/app/admin/features/channel_setting/_Dialogue/Inventory/edit-inventory/edit-inventory.component.scss
+++ b/src/app/admin/features/channel_setting/_Dialogue/Inventory/edit-inventory/edit-inventory.component.scss
@@ -31,3 +31,21 @@
     display: block;
    }
 }
+::ng-deep .select2-container {
+    width: 100% !important;
+}
+
+::ng-deep .select2-container .select2-selection--single {
+    height: 50px !important;
+    // margin-top: 1%;
+    // width: 250px !important;
+}
+
+::ng-deep .select2-container .select2-selection--single .select2-selection__rendered {
+    margin-top: 13px;
+}
+
+::ng-deep .select2-container--default .select2-selection--single .select2-selection__arrow {
+    top: 13px;
+
+}
