--- a/src/app/admin/features/channel_setting/lco-commission/lco-commission.component.html
+++ b/src/app/admin/features/channel_setting/lco-commission/lco-commission.component.html
@@ -1,4 +1,4 @@
-<section class="Tab col-12" >
+<section class="Tab col-12">
 
     <div class="display tablist justify-content-center align-items-center mb-3 ">
         <div class="tab mb-2  bttn" [class.active]="selectedTab === 'dis_commission'" style="text-align: center;"
@@ -26,12 +26,9 @@
         <div class="display input_box com_select">
             <div class="col display justify-content-start align-items-center mb-3">
                 <span style="font-size:17px;color: red;">SELECT DISTRIBUTOR MEMBERSHIP</span> &nbsp;&nbsp;
-
-
-
-                <input type="text" matInput [matAutocomplete]="auto" maxlength="20"
-                    (input)="filterOperators($event)" placeholder="Select An Membership"
-                    [matAutocompleteDisabled]="false" [value]="selectedOperator?.name">
+                <input type="text" matInput [matAutocomplete]="auto" maxlength="20" (input)="filterOperators($event)"
+                    placeholder="Select An Membership" [matAutocompleteDisabled]="false"
+                    [value]="selectedOperator?.name">
 
                 <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayOperator">
                     <mat-option *ngFor="let operator of filteredOperators" [value]="operator.value"
@@ -93,8 +90,8 @@
                         <div class="row input_box">
                             <div class="col d-flex justify-content-start align-items-center mb-3">
                                 <span style="font-size:17px;color: red;">SELECT LCO MEMBERSHIP</span> &nbsp;&nbsp;
-                                <input type="text" matInput [matAutocomplete]="auto1" 
-                                    maxlength="20" (input)="filterOperators($event)" placeholder="Select LCO MEMBERSHIP"
+                                <input type="text" matInput [matAutocomplete]="auto1" maxlength="20"
+                                    (input)="filterOperators($event)" placeholder="Select LCO MEMBERSHIP"
                                     [matAutocompleteDisabled]="false" [value]="selectedOperator?.name">
 
                                 <mat-autocomplete #auto1="matAutocomplete" [displayWith]="displayOperator">
@@ -134,15 +131,10 @@
         <div class="display input_box com_select">
             <div class="col display justify-content-start align-items-center mb-3">
                 <span style="font-size:17px;color: red;">SELECT LCO MEMBERSHIP</span> &nbsp;&nbsp;
-                <!-- <select style="color: rgb(17, 0, 0);" [(ngModel)]="lcomembershipid" (change)="onOperatorChange($event)">
-                    <option value="0" selected style="color: rgb(19, 17, 17);">SELECT LCO MEMBERSHIP
-                    </option>
-                    <option *ngFor="let lcomember of lcomembershipList" [value]="lcomember.value">{{
-                        lcomember.name}}</option>
-                </select> -->
-                <input type="text" matInput [matAutocomplete]="auto2"  maxlength="20"
-                    (input)="filterOperators($event)" placeholder="Select LCO Membership"
-                    [matAutocompleteDisabled]="false" [value]="selectedOperator?.name">
+
+                <input type="text" matInput [matAutocomplete]="auto2" maxlength="20" (input)="filterOperators($event)"
+                    placeholder="Select LCO Membership" [matAutocompleteDisabled]="false"
+                    [value]="selectedOperator?.name">
 
                 <mat-autocomplete #auto2="matAutocomplete" [displayWith]="displayOperator">
                     <mat-option *ngFor="let operator of filteredOperators" [value]="operator.value"
@@ -152,9 +144,10 @@
                 </mat-autocomplete>
             </div>
             <div class="col display justify-content-end align-items-center">
-                <a class="btn btn-outline-success mx-1" (click)="add('commission')">
+                <a class="btn btn-outline-success mx-1 bttn" style="background: rgb(250, 250, 165);"
+                    (click)="add('commission')">
                     <!-- <i class="fa fa-plus" aria-hidden="true"></i>  -->
-                    <span> ADD PRODUCT / COMMISSION AT MEMBERSHIP</span>
+                    <span style="font-weight: 600;"> ADD PRODUCT / COMMISSION AT MEMBERSHIP</span>
                 </a>
             </div>
         </div>
@@ -180,8 +173,8 @@
                             <h6 style="color:var(--primary-color);">CREATE LCO MEMBERSHIP</h6>
                         </div>
                         <ag-grid-angular #agGrid id="myGrid" class="gridtable"
-                            style=" max-height: 250px;overflow: scroll;" domLayout='normal'
-                            rowAnimation [columnDefs]="columnDefs1" [rowData]="rowData1" [rowSelection]="rowSelection"
+                            style=" max-height: 250px;overflow: scroll;" domLayout='normal' rowAnimation
+                            [columnDefs]="columnDefs1" [rowData]="rowData1" [rowSelection]="rowSelection"
                             (gridReady)="onGridReady($event)" class="ag-theme-alpine table-class"
                             [enableCellTextSelection]="true">
                         </ag-grid-angular>
@@ -195,11 +188,11 @@
                         <div class="col-12 col-md-12">
                             <div class="card">
                                 <!-- <div class="card-body"> -->
-                                    <div class="row">
-                                        <div class="col">
-                                            <app-lco-commission-chart></app-lco-commission-chart>
-                                        </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <app-lco-commission-chart></app-lco-commission-chart>
                                     </div>
+                                </div>
                                 <!-- </div> -->
                             </div>
                         </div>
@@ -214,16 +207,9 @@
                         <div class="row input_box com_select">
                             <div class="col d-flex justify-content-start align-items-center mb-3">
                                 <span style="font-size:17px;color: red;">SELECT LCO MEMBERSHIP</span> &nbsp;&nbsp;
-                                <!-- <select style="color: rgb(17, 0, 0);" [(ngModel)]="lcomembershipid"
-                                    (change)="onmembershipchange($event)">
-                                    <option value="" selected style="color: rgb(19, 17, 17);">SELECT LCO MEMBERSHIP
-                                    </option>
-                                    <option *ngFor="let lcomember of lcomembershipList" [value]="lcomember.value">{{
-                                        lcomember.name}}</option>
-                                </select> -->
 
-                                <input type="text" matInput [matAutocomplete]="auto3" 
-                                    maxlength="20" (input)="filterOperators($event)" placeholder="Select LCO Membership"
+                                <input type="text" matInput [matAutocomplete]="auto3" maxlength="20"
+                                    (input)="filterOperators($event)" placeholder="Select LCO Membership"
                                     [matAutocompleteDisabled]="false" [value]="selectedOperator?.name">
 
                                 <mat-autocomplete #auto3="matAutocomplete" [displayWith]="displayOperator">
@@ -255,7 +241,7 @@
                 <div style="padding: 1rem;text-align: center;">
                     <h6 style="color:var(--primary-color)"> LCO MEMBERSHIP FUP</h6>
                 </div>
-                <ag-grid-angular #agGrid  style="text-align: center;" domLayout='autoHeight'
+                <ag-grid-angular #agGrid style="text-align: center;" domLayout='autoHeight'
                     class="ag-theme-alpine table-class" rowAnimation [gridOptions]="gridOptions"
                     [columnDefs]="columnDefs3" [rowData]="rowData3" [enableCellTextSelection]="true">
                 </ag-grid-angular>
