--- a/src/app/admin/features/inventory/not-allocated/not-allocated.component.html
+++ b/src/app/admin/features/inventory/not-allocated/not-allocated.component.html
@@ -1,7 +1,16 @@
 <div class="col-4 d-flex justify-content-start align-items-center mb-3">
-    <button type="submit" class="btn bttn" style="background:#2795abf7;color: white;" (click)="addnew($event)"><i
-            class="fa-solid fa-upload"></i>
-        &nbsp;Inventory</button>
+    <div *ngIf="role=='ROLE_ADMIN'">
+        <button type="submit" class="btn bttn" style="background:#2795abf7;color: white;" (click)="addnew($event)"><i
+                class="fa-solid fa-upload"></i>
+            &nbsp;Inventory</button>
+    </div>
+
+
+    <div *ngIf="role=='ROLE_RECEPTION'">
+        <button type="submit" class="btn bttn" style="background:#2795abf7;color: white;" (click)="openLoginPage()"><i
+                class="fa-solid fa-upload"></i>
+            &nbsp;Inventory</button>
+    </div>
 </div>
 <div class="card">
     <h5>Not Allocated Box Details - {{rowData.length}}</h5>
