--- a/src/app/admin/features/nav/nav.component.scss
+++ b/src/app/admin/features/nav/nav.component.scss
@@ -90,8 +90,6 @@
     transition: 0.2s ease;
 }
 
-
-
 .search {
     position: relative;
     color: #aaa;
@@ -110,6 +108,12 @@
 
 .ver {
     font-size: medium;
+}
+
+.dropdown-menu.input {
+    max-height: 600px;
+    overflow-y: auto;
+    transition: max-height 0.3s ease-in-out;
 }
 
 @media screen and (max-width:660px) {
