--- a/src/app/admin/features/special_role/Dialogue/sublcooperatordialogue/sublcooperatordialogue.component.html
+++ b/src/app/admin/features/special_role/Dialogue/sublcooperatordialogue/sublcooperatordialogue.component.html
@@ -13,7 +13,7 @@
                                 <label for="">Retailer Name </label>
                             </div>
                             <div class=" input_box col-12 col-md-12">
-                                <input type="text" formControlName="retailername" placeholder="Enter Cas id">
+                                <input type="text" formControlName="retailername" placeholder="Enter Retailer Name">
                                 <div *ngIf="form.get('retailername')?.invalid && form.get('retailername')?.touched">
                                     <small class="text-danger">Retailer Name is required.</small>
                                 </div>
@@ -78,9 +78,9 @@
                                     <small class="text-danger"
                                         *ngIf="form.get('password')?.errors?.['required']">Password
                                         is required.</small>
-                                    <small class="text-danger"
-                                        *ngIf="form.get('password')?.errors?.['pattern']">Password
-                                        must be at least 8 characters, including one letter and one number.</small>
+                                        <small class="text-danger" *ngIf="form.get('password')?.errors?.['pattern']">
+                                            Password must be **6-12 characters long**, including at least **one letter** and **one number**.
+                                          </small>
                                 </div>
                             </div>
                         </div>
